# dotfiles

./: .gitignore  \  apt-get_app.sh  install  install.sh  links.sh  readme.md  scripts_summary.txt  set_my_settings.sh  to_del.lua  todo.md  workInstall.sh
.claude/: settings.local.json
DoubleCommander/: doublecmd.xml  install.sh
KDESettings/: .directory  gtkrc  katepartrc  kdeglobals  kglobalshortcutsrc  khotkeysrc  kwinrc  plasma-org.kde.plasma.desktop-appletsrc  plasmashellrc
bash_scripts/: bash_ssh.sh  restart_pmanager.sh  sync_file_to_protia.sh
docs/: zsh-completion.md
double_commander/: doublecmd.xml  install.sh  shortcuts.scf
git/: .gitconfig  gitconfig  install.sh  install_link.sh
i3/: config  i3blocks.conf  install.sh
install_scripts/: 01system_install.sh  02programming-lang-install.sh  03apps_install.sh  03terminal_apps_install.sh  04gui_apps_install.sh  09common  11container_install.sh  RPiInstall.sh  container_install.sh  generalInstall.sh  mainPCInstall.sh  vm_install.sh  workInstall.sh
mail/: install.sh
neovim/: init.vim  install  install.sh  vimrc_bak
ranger/: install.sh  rc.conf  rifle.conf  scope.sh
regolith/: Xresources
scripts/: .apt-get_app.sh.swp  RPiInstall.sh  appimage-desktop-entry.sh  apt-get_app.sh  apt-repo-fix.sh  fix_zsh_completions.sh  flash_usb.sh  generalInstall.sh  keyboard_fix.sh  mainPCInstall.sh  nvim-open.sh  (+8 more)
utils/ezdot/: README.adoc  README.md  pyproject.toml
utils/ezdot/docs/: classes.uml
utils/ezdot/ezdot/: main.py
utils/ezdot/ezdot/libs/: apt_get_package.py  github-install.py  ipackage.py  tmp.py
(+378 files in other folders)
