[tool.poetry]
name = "ezdot"
version = "0.1.0"
description = ""
authors = ["Yehonatan Elentok <yehonatan.e@solaredge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pip = "^23.0"
pipx = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
